--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,8 +89,8 @@ jobs:
       - name: "Test interactive installer"
         working-directory: ./installer
         run: |
-          sudo bash -c "python3 installer.py 1 < answers.txt"
+          sudo bash -c "python3 installer.py < answers.txt"
 
-      - name: Debugging with tmate
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3.13
+      # - name: Debugging with tmate
+      #   if: ${{ failure() }}
+      #   uses: mxschmitt/action-tmate@v3.13
