--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -157,7 +157,7 @@ jobs:
       - name: Run post-upgrade tests
         working-directory: ./tests/upgrade/integration
         run: |
-          ginkgo -r --tags upgrade --race --tags upgrade --focus-file post_test.go
+          ginkgo -r --race --tags upgrade_integration --focus-file post_test.go
       - name: Download binary artifact (build-latest)
         uses: actions/download-artifact@v3
         id: download
@@ -177,7 +177,7 @@ jobs:
       - name: Submit governance fee parameter change proposals
         working-directory: ./tests/upgrade/integration
         run: |
-          ginkgo -r --tags upgrade --race --tags upgrade_integration --focus-file param_change_proposal_test.go
+          ginkgo -r --race --tags upgrade_integration --focus-file param_change_proposal_test.go
       - name: Run pricing integration tests after successful param change proposal
         working-directory: ./tests/integration
         run: |
