--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,5 +92,5 @@ jobs:
       #     sudo bash -c "python3 installer.py < answers.txt"
 
       - name: Debugging with tmate
-        if: ${{ failure() }}
+        # if: ${{ failure() }}
         uses: mxschmitt/action-tmate@v3.13
