--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report-unit.xml
-          path: report-unit.xml
 
   integration-tests:
     name: "Integration Tests"
@@ -103,10 +102,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report-integration.xml
-          path: report-integration.xml
 
-  upgrade-migration-tests:
-    name: "Upgrade Integration Tests"
+  upgrade-tests:
+    name: "Upgrade Tests"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -145,47 +143,81 @@ jobs:
         run: docker load -i cheqd-node-build.tar
 
       # Run tests
-
       - name: Setting up network with old binary inside (mainnet version)
         working-directory: ./tests/upgrade/integration
         run: |
           bash scripts/setup.sh
+
       - name: Run pre-upgrade tests
         working-directory: ./tests/upgrade/integration
         run: |
-          ginkgo -r --race --tags upgrade_integration --focus-file pre_test.go
+          ginkgo -r --race --tags upgrade_integration --focus-file pre_test.go --keep-going --trace --junit-report ../../../report-pre-upgrade.xml
+
+      - name: Upload pre-upgrade tests result
+        uses: actions/upload-artifact@v3
+        with:
+          name: report-pre-upgrade.xml
+
       - name: Restart network using new node version (build-latest)
         working-directory: ./tests/upgrade/integration
         run: |
           bash scripts/upgrade.sh
+
       - name: Run post-upgrade tests
         working-directory: ./tests/upgrade/integration
         run: |
-          ginkgo -r --race --tags upgrade_integration --focus-file post_test.go
+          ginkgo -r --race --tags upgrade_integration --focus-file post_test.go --keep-going --trace --junit-report ../../../report-post-upgrade.xml
+
+      - name: Upload post-upgrade tests result
+        uses: actions/upload-artifact@v3
+        with:
+          name: report-post-upgrade.xml
+
       - name: Download binary artifact (build-latest)
         uses: actions/download-artifact@v3
         id: download
         with:
           name: cheqd-noded
           path: ${{ env.RUNNER_BIN_DIR }}
+
       - name: Restore binary permissions
         run: sudo chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
+
       - name: Run integration tests on upgraded network
         working-directory: ./tests/integration
         run: |
-          ginkgo -r --tags integration --race --randomize-suites --keep-going --trace
+          ginkgo -r --tags integration --race --randomize-suites --keep-going --trace --junit-report ../../report-upgraded-integration.xml
+
+      - name: Upload post-upgrade integration tests result
+        uses: actions/upload-artifact@v3
+        with:
+          name: report-upgraded-integration.xml
+
       - name: Show logs on failure
         if: failure()
         working-directory: ./docker/localnet
         run: docker compose --env-file build-latest.env logs --tail --follow
+
       - name: Submit governance fee parameter change proposals
         working-directory: ./tests/upgrade/integration
         run: |
-          ginkgo -r --race --tags upgrade_integration --focus-file param_change_proposal_test.go
+          ginkgo -r --race --tags upgrade_integration --focus-file param_change_proposal_test.go --keep-going --trace --junit-report ../../../report-pricing-proposal.xml
+
+      - name: Upload pricing proposal tests result
+        uses: actions/upload-artifact@v3
+        with:
+          name: report-pricing-proposal.xml
+
       - name: Run pricing integration tests after successful param change proposal
         working-directory: ./tests/integration
         run: |
-          ginkgo -r --tags integration --race --randomize-suites --keep-going --trace --skip-file cli_diddoc_test.go --skip-file cli_diddoc_negative_test.go --skip-file cli_resource_test.go --skip-file cli_resource_negative_test.go
+          ginkgo -r --tags integration --race --randomize-suites --keep-going --trace --skip-file cli_diddoc_test.go --skip-file cli_diddoc_negative_test.go --skip-file cli_resource_test.go --skip-file cli_resource_negative_test.go --junit-report ../../report-pricing-change.xml
+
+      - name: Upload pricing change tests result
+        uses: actions/upload-artifact@v3
+        with:
+          name: report-pricing-change.xml
+
       - name: Cleanup after tests
         working-directory: ./tests/upgrade/integration
         run: |
@@ -194,29 +226,23 @@ jobs:
   report-results:
     name: "Report"
     runs-on: ubuntu-latest
-    needs: [unit-tests, integration-tests]
+    needs: [unit-tests, integration-tests, upgrade-tests]
     if: always()
 
     steps:
       - uses: actions/checkout@v3
-      - name: Download unit tests report
+      - name: Download all reports
         uses: actions/download-artifact@v3
         with:
-          name: report-unit.xml
-
-      - name: Download integration tests report
-        uses: actions/download-artifact@v3
-        with:
-          name: report-integration.xml
+          name: report**
 
       - name: Combine test results
         run: |
-          python .github/scripts/xml_combine.py report-integration.xml report-unit.xml > report.xml
+          python ./.github/scripts/xml_combine.py report-unit.xml report-integration.xml report-pre-upgrade.xml report-post-upgrade.xml report-upgraded-integration.xml report-pricing-proposal.xml report-pricing-change.xml > report.xml
 
       - uses: mikepenz/action-junit-report@v3
         with:
           report_paths: 'report.xml'
-          token: ${{ secrets.GITHUB_TOKEN }}
           check_name: ""
           suite_regex: '*'
           include_passed: true
