Fixed workflow upload errors

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report-unit.xml
+          path: report-unit.xml
 
   integration-tests:
     name: "Integration Tests"
@@ -102,6 +103,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report-integration.xml
+          path: report-integration.xml
 
   upgrade-tests:
     name: "Upgrade Tests"
@@ -157,6 +159,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report-pre-upgrade.xml
+          path: report-pre-upgrade.xml
 
       - name: Restart network using new node version (build-latest)
         working-directory: ./tests/upgrade/integration
@@ -172,6 +175,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report-post-upgrade.xml
+          path: report-post-upgrade.xml
 
       - name: Download binary artifact (build-latest)
         uses: actions/download-artifact@v3
@@ -192,6 +196,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report-upgraded-integration.xml
+          path: report-upgraded-integration.xml
 
       - name: Show logs on failure
         if: failure()
@@ -207,6 +212,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report-pricing-proposal.xml
+          path: report-pricing-proposal.xml
 
       - name: Run pricing integration tests after successful param change proposal
         working-directory: ./tests/integration
@@ -217,6 +223,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report-pricing-change.xml
+          path: report-pricing-change.xml
 
       - name: Cleanup after tests
         working-directory: ./tests/upgrade/integration
