--- a/.github/workflows/cleanup-cache-automatic.yml
+++ b/.github/workflows/cleanup-cache-automatic.yml
@@ -12,7 +12,7 @@ jobs:
 
   cache-purge:
     name: "Purge Actions cache"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
 
