--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,7 +10,7 @@ jobs:
 
   sh-euox-pipefail-check:
     name: "Shell pipefail check"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +20,7 @@ jobs:
   
   md-link-check:
     name: "Broken Markdown links"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
       - uses: actions/checkout@v3
@@ -35,7 +35,7 @@ jobs:
     # We can't use VALIDATE_GO from super linter because of this issue:
     # https://github.com/github/super-linter/issues/143
     name: "Golang"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
       - uses: actions/checkout@v3
@@ -53,7 +53,7 @@ jobs:
 
   proto-lint:
     name: "Protobuf"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       
@@ -72,7 +72,7 @@ jobs:
 
   super-lint:
     name: "Super Linter"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
     - uses: actions/checkout@v3
