--- a/.github/workflows/cleanup-cache-manual.yml
+++ b/.github/workflows/cleanup-cache-manual.yml
@@ -12,7 +12,7 @@ jobs:
 
   delete-caches:
     name: "Delete Actions caches"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     
     steps:
       - name: "Wipe Github Actions cache"
