Updated mainnet Docker Compose file

--- a/docker/persistent-chains/docker-compose.env
+++ b/docker/persistent-chains/docker-compose.env
@@ -8,12 +8,12 @@
 
 # Define which network you want to deploy a node
 # Change value to "testnet" if targetting testnet
-CHEQD_NETWORK="mainnet"
+NETWORK="mainnet"
 
 # Define cheqd-noded software release version
 # Current MAINNET recommended version: 0.6.7
 # Current TESTNET recommended version: 0.6.7
-DOCKER_IMAGE_VERSION="v1.0.0"
+DOCKER_IMAGE_VERSION="0.6.9"
 
 
 ###############################################################
@@ -46,17 +46,17 @@ COSMOS_GRPC_GATEWAY_API_PORT=9191
 
 # Define a Docker volume source
 # Default is set to the volume name referred in the docker-compose.yml file
-CHEQD_DOCKER_VOLUME_SOURCE="cheqd_volume"
+DOCKER_VOLUME_SOURCE="cheqd_volume"
 
 # Define driver to be used for Docker volume 
 # Set to "local" for a single host, or others such as "overlay" for writing to
 # an externally available volume through volume plugins, e.g. "nfs"
 # You need to specify **driver_opts** in docker-compose.yml for your preferred driver
 # Refer to: https://docs.docker.com/engine/extend/legacy_plugins/#/volume-plugins
-CHEQD_DOCKER_VOLUME_DRIVER="local"
+DOCKER_VOLUME_DRIVER="local"
 
 # Set to true if created externally, outside of Docker Compose
-CHEQD_DOCKER_VOLUME_IS_EXTERNAL="false"
+DOCKER_VOLUME_IS_EXTERNAL="false"
 
 ###############################################################
 ###                 OPTIONAL: Build arguments               ###
