--- a/docker/persistent-chains/container.env
+++ b/docker/persistent-chains/container.env
@@ -5,12 +5,17 @@
 ###     INPUT REQUIRED: Node Initialisation Parameters      ###
 ###############################################################
 
+# A custom human-readable name for this node
+CHEQD_NODED_MONIKER="moniker-placeholder"
+
 # Externally-reachable address for the node
 # Syntax is <externally-reachable-ip-address>:26656 or <dns-address>:26656
 CHEQD_NODED_P2P_EXTERNAL_ADDRESS=":26656"
 
-# A custom human-readable name for this node
-CHEQD_NODED_MONIKER="moniker-placeholder"
+# Chain ID of the network to join
+# Current MAINNET chain ID: cheqd-mainnet-1
+# Current TESTNET chain ID: cheqd-testnet-4
+CHEQD_NODED_CHAIN_ID="cheqd-mainnet-1"
 
 ###############################################################
 ###             OPTIONAL: Per-node safe defaults            ###
