Set default keyring

--- a/docker/localnet/container-env/seed-0.env
+++ b/docker/localnet/container-env/seed-0.env
@@ -4,14 +4,15 @@
 CHEQD_NODED_MONIKER="seed-0"
 CHEQD_NODED_RPC_LADDR="tcp://0.0.0.0:26657"
 CHEQD_NODED_API_ENABLE="true"
-CHEQD_NODED_MINIMUM_GAS_PRICES="25ncheq" 
-
-# Seed specific
-CHEQD_NODED_P2P_SEED_MODE
+CHEQD_NODED_MINIMUM_GAS_PRICES="50ncheq"
+CHEQD_NODED_KEYRING_BACKEND="test"
 
 # Consensus
 CHEQD_NODED_CONSENSUS_TIMEOUT_PROPOSE="500ms"
 CHEQD_NODED_CONSENSUS_TIMEOUT_PREVOTE="500ms"
 CHEQD_NODED_CONSENSUS_TIMEOUT_PRECOMMIT="500ms"
 CHEQD_NODED_CONSENSUS_TIMEOUT_COMMIT="500ms"
-CHEQD_NODED_CREATE_EMPTY_BLOCKS="false"
+CHEQD_NODED_CONSENSUS_CREATE_EMPTY_BLOCKS="false"
+
+# Seed specific
+CHEQD_NODED_P2P_SEED_MODE="true"
