--- a/docker/localnet/container-env/seed-0.env
+++ b/docker/localnet/container-env/seed-0.env
@@ -7,12 +7,13 @@ CHEQD_NODED_API_ENABLE="true"
 CHEQD_NODED_MINIMUM_GAS_PRICES="50ncheq"
 CHEQD_NODED_KEYRING_BACKEND="test"
 
+# P2P
+CHEQD_NODED_P2P_ADDR_BOOK_STRICT="false"
+CHEQD_NODED_P2P_SEED_MODE="true"
+
 # Consensus
 CHEQD_NODED_CONSENSUS_TIMEOUT_PROPOSE="500ms"
 CHEQD_NODED_CONSENSUS_TIMEOUT_PREVOTE="500ms"
 CHEQD_NODED_CONSENSUS_TIMEOUT_PRECOMMIT="500ms"
 CHEQD_NODED_CONSENSUS_TIMEOUT_COMMIT="500ms"
 CHEQD_NODED_CONSENSUS_CREATE_EMPTY_BLOCKS="false"
-
-# Seed specific
-CHEQD_NODED_P2P_SEED_MODE="true"
