--- a/docker/localnet/container-env/validator-1.env
+++ b/docker/localnet/container-env/validator-1.env
@@ -7,6 +7,9 @@ CHEQD_NODED_API_ENABLE="true"
 CHEQD_NODED_MINIMUM_GAS_PRICES="50ncheq"
 CHEQD_NODED_KEYRING_BACKEND="test"
 
+# P2P
+CHEQD_NODED_P2P_ADDR_BOOK_STRICT="false"
+
 # Consensus
 CHEQD_NODED_CONSENSUS_TIMEOUT_PROPOSE="500ms"
 CHEQD_NODED_CONSENSUS_TIMEOUT_PREVOTE="500ms"
