--- a/docker/localnet/docker-compose.yml
+++ b/docker/localnet/docker-compose.yml
@@ -38,6 +38,8 @@ services:
         target: /node_key
       - source: validator-0-priv-val-key
         target: /priv_validator_key
+      - source: validator-0-account-key
+        target: /validator-account
 
   validator-1:
     image: ${BUILD_IMAGE}
@@ -76,6 +78,8 @@ services:
         target: /node_key
       - source: validator-1-priv-val-key
         target: /priv_validator_key
+      - source: validator-1-account-key
+        target: /validator-account
 
   validator-2:
     image: ${BUILD_IMAGE}
@@ -114,6 +118,8 @@ services:
         target: /node_key
       - source: validator-2-priv-val-key
         target: /priv_validator_key
+      - source: validator-2-account-key
+        target: /validator-account
 
   validator-3:
     image: ${BUILD_IMAGE}
@@ -152,6 +158,8 @@ services:
         target: /node_key
       - source: validator-3-priv-val-key
         target: /priv_validator_key
+      - source: validator-2-account-key
+        target: /validator-account
 
   seed-0:
     image: ${BUILD_IMAGE}
@@ -241,24 +249,32 @@ configs:
     file: network-config/validator-0/config/node_key.json
   validator-0-priv-val-key:
     file: network-config/validator-0/config/priv_validator_key.json
+  validator-0-account-key:
+    file: network-config/validator-0/keyring-test/validator-0.json
 
   # Validator 1
   validator-1-node-key:
     file: network-config/validator-1/config/node_key.json
   validator-1-priv-val-key:
     file: network-config/validator-1/config/priv_validator_key.json
+  validator-1-account-key:
+    file: network-config/validator-1/keyring-test/validator-1.json
 
   # Validator 2
   validator-2-node-key:
     file: network-config/validator-2/config/node_key.json
   validator-2-priv-val-key:
     file: network-config/validator-2/config/priv_validator_key.json
+  validator-2-account-key:
+    file: network-config/validator-2/keyring-test/validator-2.json
 
   # Validator 3
   validator-3-node-key:
     file: network-config/validator-3/config/node_key.json
   validator-3-priv-val-key:
     file: network-config/validator-3/config/priv_validator_key.json
+  validator-3-account-key:
+    file: network-config/validator-3/keyring-test/validator-3.json
 
   # Seed 0
   seed-0-node-key:
