--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,10 @@ jobs:
 
       - name: Run 'set -euox pipefail' check
         run: bash ./.github/scripts/ensure_set_euox_pipefail.sh
-  
+
+      - name: Debugging with tmate
+        uses: mxschmitt/action-tmate@v3.13
+
   md-link-check:
     name: "Broken Markdown links"
     runs-on: ubuntu-20.04
