--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,6 +19,7 @@ jobs:
         run: bash ./.github/scripts/ensure_set_euox_pipefail.sh
 
       - name: Debugging with tmate
+        if: always()
         uses: mxschmitt/action-tmate@v3.13
 
   md-link-check:
