--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,8 +116,11 @@ jobs:
         working-directory: ./docker/localnet
         run: |
           wget -c -qO- ${{ env.RELEASE_URL }}
+          ls -al
           tar -xzf cheqd-node*.tar.gz -C ${{ env.RUNNER_BIN_DIR }} --strip-components=${{ env.DIRECTORY_DEPTH }}
+          ls -al ${{ env.RUNNER_BIN_DIR }}
           chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
+          ls -al ${{ env.RUNNER_BIN_DIR }}
           which cheqd-noded
           cheqd-noded version
         env:
