--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,9 +118,10 @@ jobs:
       - name: Install legacy binary
         id: legacy-binary
         run: |
-          wget -qO- ${{ env.RELEASE_URL }} | sudo tar -xzv --directory ${{ env.RUNNER_BIN_DIR }} --transform "s#^.+/##x"
+          wget -qO- "$RELEASE_URL" | sudo tar -xzv --directory "${{ env.RUNNER_BIN_DIR }}" --transform "s#^.+/##x"
           sudo chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
-          echo ::set-output name=INSTALLED_VERSION::$(cheqd-noded version)
+          which cheqd-noded
+          echo "INSTALLED_VERSION=$(cheqd-noded version)" >> $GITHUB_OUTPUTS
         env:
           RELEASE_URL: https://github.com/cheqd/cheqd-node/releases/download/v0.3.1/cheqd-node_0.3.1.tar.gz
 
