--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -114,19 +114,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # Generate network configuration with v0.3.1
+      - name: Download legacy binary
+        run: wget -q "$RELEASE_URL"
+        env:  
+          RELEASE_URL: https://github.com/cheqd/cheqd-node/releases/download/v0.3.1/cheqd-node_0.3.1.tar.gz
+
       - name: Install legacy binary
         id: legacy-binary
         run: |
-          wget -qO- "$RELEASE_URL" | sudo tar -xzv --directory ${{ env.RUNNER_BIN_DIR }} --transform "s#^.+/##x"
+          sudo tar -xzvf "*.tar.gz" --directory ${{ env.RUNNER_BIN_DIR }} --transform "s#^.+/##x"
           sudo chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
-          which cheqd-noded
-          echo "INSTALLED_VERSION=$(cheqd-noded version)" >> $GITHUB_OUTPUT
-        env:
-          RELEASE_URL: https://github.com/cheqd/cheqd-node/releases/download/v0.3.1/cheqd-node_0.3.1.tar.gz
+          echo "INSTALLED_VERSION=$(cheqd-noded version)" >> "$GITHUB_OUTPUT"
 
       - name: Generate localnet config with legacy binary
-        if: ${{ steps.legacy-binary.outputs.INSTALLED_VERSION == '0.3.1' }}
+        # if: ${{ steps.legacy-binary.outputs.INSTALLED_VERSION == '0.3.1' }}
         working-directory: ./docker/localnet
         run: |
           bash gen-network-config.sh
