--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ defaults:
   run:
     shell: bash
 env:
-  RUNNER_BIN_DIR: /usr/bin/
+  RUNNER_BIN_DIR: /usr/bin
 permissions:
   contents: write
   packages: read
@@ -127,7 +127,7 @@ jobs:
           echo "INSTALLED_VERSION=$(cheqd-noded version)" >> "$GITHUB_OUTPUT"
 
       - name: Generate localnet config with legacy binary
-        # if: ${{ steps.legacy-binary.outputs.INSTALLED_VERSION == '0.3.1' }}
+        if: ${{ steps.legacy-binary.outputs.INSTALLED_VERSION == '0.3.1' }}
         working-directory: ./docker/localnet
         run: |
           bash gen-network-config.sh
