--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -120,16 +120,20 @@ jobs:
           RELEASE_URL: https://github.com/cheqd/cheqd-node/releases/download/v0.3.1/cheqd-node_0.3.1.tar.gz
 
       - name: Install legacy binary
-        id: legacy-binary
         run: |
           sudo tar -xzvf *.tar.gz --directory ${{ env.RUNNER_BIN_DIR }} --transform "s#^.+/##x"
           sudo chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
           echo "INSTALLED_VERSION=$(cheqd-noded version)" >> "$GITHUB_OUTPUT"
 
+      - name: Set legacy binary version
+        id: legacy-version
+        run: echo "INSTALLED_VERSION=$(cheqd-noded version)" >> $GITHUB_OUTPUT
+
       - name: Generate localnet config with legacy binary
-        if: ${{ steps.legacy-binary.outputs.INSTALLED_VERSION == '0.3.1' }}
+        # if: ${{ steps.legacy-binary.outputs.INSTALLED_VERSION == '0.3.1' }}
         working-directory: ./docker/localnet
         run: |
+          echo ${{ steps.legacy-binary.outputs.INSTALLED_VERSION }}
           bash gen-network-config.sh
         env:
           CHAIN_ID: "cheqd"
@@ -249,7 +253,8 @@ jobs:
 
       - name: Debugging with tmate
         if: failure()
-        uses: mxschmitt/action-tmate@v3.13
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 15
 
   # report-results:
   #   name: "Report"
