--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,16 +124,20 @@ jobs:
         run: |
           sudo tar -xzvf *.tar.gz --directory ${{ env.RUNNER_BIN_DIR }} --transform "s#^.+/##x"
           sudo chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
-          echo "INSTALLED_VERSION=$(cheqd-noded version)" >> $GITHUB_OUTPUT
+          echo "INSTALLED_VERSION=$(cheqd-noded version)" >> "$GITHUB_OUTPUT"
 
       - name: Generate localnet config with legacy binary
-        working-directory: ./docker/localnet
+        working-directory: ./docker/localnet/generate-network
         run: bash gen-network-config.sh
         env:
           CHAIN_ID: "cheqd"
           VALIDATORS_COUNT: 4
           SEEDS_COUNT: 1
           OBSERVERS_COUNT: 1
+      
+      - name: Import accounts with legacy binary
+        working-directory: ./docker/localnet/generate-network
+        run: bash import-keys.sh
 
       # - name: Login to GitHub Container Registry
       #   uses: docker/login-action@v2
