--- a/docker/localnet/generate-network/Dockerfile
+++ b/docker/localnet/generate-network/Dockerfile
@@ -7,6 +7,9 @@ FROM alpine:3.17 AS networkgen
 # Install pre-requisites
 RUN apk update && apk add --no-cache bash ca-certificates
 
+# Set bash defaults
+SHELL ["/bin/bash", "-euo", "pipefail", "-c"]
+
 # Set build-time arguments
 ARG RELEASE_URL
 
@@ -28,9 +31,6 @@ ENV CHAIN_ID="cheqd"
 ENV VALIDATORS_COUNT=4
 ENV SEEDS_COUNT=1
 ENV OBSERVERS_COUNT=1
-
-# Set working directory & bash defaults
-SHELL ["/bin/bash", "-euo", "pipefail", "-c"]
 
 # Set plain vanilla default entrypoint/command
 ENTRYPOINT [ "generate-network" ]
